--- a/_config.yml
+++ b/_config.yml
@@ -75,7 +75,7 @@ social:
 # Site Author
 author:
   name             : "Jinyang Li"
-  avatar           : "photo.png"
+  avatar           : "heeps://lijinyang0228.github.io//files/photo/white.jpg"
   bio              : 
   location         : "Beijing, China"
   #employer         :
