--- a/_config.yml
+++ b/_config.yml
@@ -10,11 +10,11 @@ locale                   : "en-US"
 title                    : "Jinyang Li"
 title_separator          : "-"
 name                     : &name "Jinyang Li"
-description              : &description "junoir at Peking University, with a computer science major"
+description              : description "Computer Science Junoir Student, Peking University"
 url                      : https://lijinyang0228.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "lijinyang0228.github.io"
-teaser                   :  # filename of teaser fallback teaser image placed in /images/, .e.g. "500x300.png"
+teaser                   :  "photo.jpg"
 breadcrumbs              : false # true, false (default)
 words_per_minute         : 160
 future                   : true
